Migrate to Flynn 3

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,8 @@
 .idea
 js/lib/flynn/old
 js/lib/flynn/*.sh
+js/lib/flynn/flynn*.js
+js/lib/flynn/flynn.min.js.source-map
 scrapbook
 deploy.sh
+deploy-exclude.txt
